--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "http://bug-guide.github.io/movie_app/build",
+  "homepage": "http://bug-guide.github.io/movie_app",
   "devDependencies": {
     "gh-pages": "^1.1.0"
   }
